<resources>
    <string name="app_name" translatable="false">Tms Android</string>
    <string name="dz14">dz14</string>
    <string name="dz15">dz15</string>
    <string name="dz16">dz16</string>
    <string name="dz17">dz17</string>
    <string name="dz18">dz18</string>
    <string name="dz19">dz19</string>
    <string name="dz20">dz20</string>
    <string name="dz21">dz21</string>
    <string name="dz22">dz22</string>
    <string name="task1">Task1</string>
    <string name="task2">Task2</string>
    <string name="task3">Task3</string>
    <string name="task4">Task4</string>
    <string name="task5">Task5</string>
    <string name="task6">Task6</string>
    <string name="task7">Task7</string>
    <string name="enter_your_question">Enter your question</string>
    <string name="show_answer">Show answer</string>
    <string name="next_puzzle">Next Puzzle</string>
    <string name="default_string">…</string>
    <string name="check">Check</string>
    <string name="your_answer">Your answer</string>
    <string name="equals">=</string>
    <string name="zero">0</string>
    <string name="plus">+</string>
    <string name="random">Random</string>
    <string name="random_number">Random number</string>
    <string name="result">Result</string>
    <string name="sum">Sum</string>
    <string name="enter_number">Enter number</string>
    <string name="creation_of_a_cat">Creation of a cat</string>
    <string name="creation_of_a_table">Creation of a table</string>
    <string name="name">Name</string>
    <string name="weight">Weight</string>
    <string name="height">Height</string>
    <string name="color">Color</string>
    <string name="length">Length</string>
    <string name="strength">Strength =</string>
    <string name="material">Material</string>
    <string name="legs">Legs</string>
    <string name="jump">Jump</string>
    <string name="result_of_jumping">Result of jumping</string>
    <string name="jump_is_ok">Jump is OK</string>
    <string name="jump_is_not_ok">Jump is not OK</string>
    <string name="a">a =</string>
    <string name="b">b =</string>
    <string name="c">с =</string>
    <string name="run">Run</string>
    <string name="rate">Rate</string>
    <string name="enter_rating">Enter rating</string>
    <string name="letter1">1st letter</string>
    <string name="x">x =</string>
    <string name="y">y =</string>
    <string name="letter2">2nd letter</string>
    <string name="letter1_contain_letter2">1st letter can contain 2nd letter</string>
    <string name="letter2_contain_letter1">2st letter can contain 1nd letter</string>
    <string name="impossible">Impossible</string>
    <string name="factorial">Factorial</string>
    <string name="number">Number</string>
    <string name="toBinary">toBinary()</string>
    <string name="start">Start</string>
    <string name="stop">Stop</string>
    <string name="reset">Reset</string>
    <string name="time_in_seconds">Time in seconds</string>
    <string name="seconds_remaining">"Seconds remaining: "</string>
    <string name="done">Done!</string>
    <string name="brest">Brest</string>
    <string name="vitebsk">Vitebsk</string>
    <string name="gomel">Gomel</string>
    <string name="grodno">Grodno</string>
    <string name="mogilev">Mogilev</string>
    <string name="minsk">Minsk</string>
    <string name="sum_1_100">"Sum from 1 to 100 = "</string>
    <string name="sum_of_even_1_99">Sum of even from 1 to 99 =</string>
    <string name="email">Email</string>
    <string name="gmail_suffix">"@gmail.com"</string>
    <string name="password">Password</string>
    <string name="login">Login</string>
    <string name="login_fragment">Open Login Fragment</string>
    <string name="logging_in">Logging in…</string>
    <string name="email_password_error">Incorrect inputted data</string>
    <string name="email_helper_text">Input your email</string>
    <string name="password_helper_text">Input your password</string>
    <string name="day_theme">Day theme</string>
    <string name="night_theme">Night theme</string>
    <string name="my_media_player">MyMediaPlayer</string>
    <string name="play">Play</string>
    <string name="pause">Pause</string>
    <string name="stop_service">Stop Service</string>
    <string name="dz24">dz24</string>
    <string name="dz23">dz23</string>
    <string name="car_logo_description">Car logo</string>
    <string name="dz25">dz25</string>
    <string name="dz26">dz26</string>
    <string name="add_word">Add word</string>
    <string name="hint_word">Word…</string>
    <string name="button_save">Save</string>
    <string name="empty_not_saved">Word not saved because it is empty.</string>
    <string name="room_example">Room example</string>
    <string name="add">Add</string>
    <string name="dz26alt">dz26alt</string>
    <string name="delete_item">Delete item</string>
    <string name="new_word_is_added">"New word is added: "</string>
    <string name="please_fill_out_field">Please fill out field</string>
    <string name="db_is_deleted_successfully">DB is deleted successfully!</string>
    <string name="clear_db">Clear db</string>
    <string name="delete_db_title">Delete all DB?</string>
    <string name="delete_db_message">Are you sure want to delete Database?</string>
    <string name="delete_item_title">"Delete "</string>
    <string name="delete_item_message">"Are you sure want to delete "</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>
    <string name="dz27">dz27</string>
    <string name="meme_image_description">Meme image description</string>
    <string name="dz27alt">scorebat</string>
    <string name="dz28" translatable="false">dz28</string>
    <!-- Titles -->
    <string name="blur_title" translatable="false">Select Blur Amount</string>
    <!-- Buttons -->
    <string name="select_image" translatable="false">Select Image</string>
    <string name="go" translatable="false">Go</string>
    <string name="see_file" translatable="false">See File</string>
    <!-- Content descriptions -->
    <string name="description_image" translatable="false">The image to blur and save.</string>
    <!-- Blur levels -->
    <string name="blur_lv_1" translatable="false">A little blurred</string>
    <string name="blur_lv_2" translatable="false">More blurred</string>
    <string name="blur_lv_3" translatable="false">The most blurred</string>
    <string name="cancel_work" translatable="false">Cancel Work</string>
    <!-- Messages -->
    <string name="set_permissions_in_settings" translatable="false">Go to Settings -> Apps and Notifications ->
        WorkManager Demo -> App Permissions and grant access to Storage.</string>
    <string name="dz29" translatable="false">dz29</string>
    <string name="app_widget_description" translatable="false">There is a result of the last match from scorebat.com</string>
    <string name="dark_place">You are in a dark place</string>
    <string name="google_maps" translatable="false">Google Maps</string>
</resources>