<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".dz.dz16.Dz16Fragment">

    <Button
        android:id="@+id/b_task1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/task1"
        app:layout_constraintBottom_toTopOf="@+id/b_task2"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <Button
        android:id="@+id/b_task2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/task2"
        app:layout_constraintBottom_toTopOf="@+id/b_task3"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <Button
        android:id="@+id/b_task3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/task3"
        app:layout_constraintBottom_toTopOf="@+id/b_task4"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <Button
        android:id="@+id/b_task4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/task4"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/b_task5"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/task5"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/b_task4" />

    <Button
        android:id="@+id/b_task6"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/task6"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/b_task5" />

    <Button
        android:id="@+id/b_task7"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/task7"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/b_task6" />
</androidx.constraintlayout.widget.ConstraintLayout>